Made the very very very basic start

--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hit or Stand</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
+    body, html {
+      margin: 0;
+      height: 100%;
+    }
+
+    .container {
+      display: flex;
+      height: 100vh;
+    }
+
+    .left {
+      width: 200px;
+      background-color: #ffffff;
+      padding: 1rem;
+    }
+
+    .center {
+      flex: 1;
+      background-color: #ffffff;
+      padding: 1rem;
+    }
+
+    .right {
+      width: 200px;
+      background-color: #ffffff;
+      padding: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="left">Chose Your Cards:</div>
+    <div class="center">You Should:</div>
+    <div class="right">Chose The Dealer Cards:</div>
+  </div>
+</body>
+</html>
